--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -3,7 +3,7 @@
   <version>1.0</version>
   <id>com.ex10se.push-create-mr</id>
   <name>Git Push Create MR</name>
-  <vendor>ex10se</vendor>
+  <vendor url="https://github.com/ex10se">ex10se</vendor>
   <description><![CDATA[Adds "Commit-Push-MR" button to commit panel.
     Automatically creates merge request in GitLab when pushing commits.]]></description>
   <depends>com.intellij.modules.platform</depends>
